# trabalho_banco_de_dados

./: README.md  app.py  pyproject.toml
static/css/: style.css
templates/: formulario.html  visualizar_dados.html
